--- a/main/css/style.css
+++ b/main/css/style.css
@@ -20,8 +20,26 @@ canvas{
     left: 20px;
 }
 
+h1{
+    font-family: 'Josefin Sans', sans-serif;
+    font-weight: normal;
+    #font-size: medium;
+    font-size: 20px;
+    margin: 0;
+    padding-left: 12px;
+    padding-bottom: 10px;
+}
+
 h2{
     font-family: 'Josefin Sans', sans-serif;
     font-weight: normal;
+    font-size: medium;
     margin: 0;
+}
+
+#info{
+    position: absolute;
+    z-index: 1000;
+    bottom: 100px;
+    left: 30px;
 }
