--- a/views/canvas.ejs
+++ b/views/canvas.ejs
@@ -1,31 +1,45 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="css/style.css"/>
-<script type="text/javascript" src="vendor/jquery-1.11.2.min.js"></script>
-<input type="color" value="#ffffff" onChange="currentColor = this.value">
-
-<input type="button" id="b1" value="Fill" onclick="fill(currentColor)">
-<input type="button" id="b2" value="Erase" onclick="erase()">
-<input type="button" id="b3" value="Save">
-<input id="name" type="text" name="name" placeholder="name">
-<input id="author" type="text" name="author" placeholder="author">
-<select name="pose" id="pose">
-  <option value="1">Pose 1</option>
-  <option value="2">Pose 2</option>
-  <option value="3">Pose 3</option>
-  <option value="4">Pose 4</option>
-  <option value="5">Pose 5</option>
-  <option value="6">Pose 6</option>
-  <option value="7">Pose 7</option>
-  <option value="8">Pose 8</option>
-  <option value="9">Pose 9</option>
-  <option value="10">Pose 10</option>
-</select>
-<canvas id="myCanvas" width="400" height="400"
-style="border:1px solid #c3c3c3;">
-Your browser does not support the HTML5 canvas tag.
-</canvas>
-
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <link href='http://fonts.googleapis.com/css?family=Josefin+Sans:300,400' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/style.css"/>
+    <script type="text/javascript" src="vendor/jquery-1.11.2.min.js"></script>
+  </head>
+  <body>
+    <div id="creation">
+      <input type="button" id="Fill" value="Fill" onclick="fill(currentColor)">
+      <input type="button" id="Erase" value="Erase" onclick="erase_all()">
+      <input type="button" id="Save" value="Save">
+      <input id="name" type="text" name="name" placeholder="name">
+      <input id="author" type="text" name="author" placeholder="author">
+      <select name="pose" id="pose">
+        <option value="1">Pose 1</option>
+        <option value="2">Pose 2</option>
+        <option value="3">Pose 3</option>
+        <option value="4">Pose 4</option>
+        <option value="5">Pose 5</option>
+        <option value="6">Pose 6</option>
+        <option value="7">Pose 7</option>
+        <option value="8">Pose 8</option>
+        <option value="9">Pose 9</option>
+        <option value="10">Pose 10</option>
+      </select>
+      <canvas id="creation_canvas" height="500px" width="500px"></canvas>
+    </div>
+    <div id="environment">
+      <div id="info">
+          <h1>Information</h1>
+          <h2 id="i_x">user_x</h2>
+          <h2 id="i_y">user_y</h2>
+          <h2 id="i_movement">movement: Resting</h2>
+      </div>
+      <canvas id="environment_canvas" resize></canvas>    </div>
+    </body>
+<script type="text/javascript" src="js/platform.js"></script>
 <script>
+  hab.init([]);
+  hab.start();
   var preloaded =<%-JSON.stringify(sprite)%>
 </script>
 <script type="text/javascript" src="js/array.js"></script>
