--- a/views/canvas.ejs
+++ b/views/canvas.ejs
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="creation">
+      <input type="color" id="colorpicker" value="#ffffff" onChange="(currentColor = this.value)">
       <input type="button" id="Fill" value="Fill" onclick="fill(currentColor)">
       <input type="button" id="Erase" value="Erase" onclick="erase_all()">
       <input type="button" id="Save" value="Save">
