fixed array indexing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,6 +49,118 @@ h2{
 #creation{
     position: absolute;
     z-index: 100;
+    top: 90px;
+    left: 30px;
+    background: #FFFFFF;
+    padding: 5px;
+}
+
+#creation_canvas{
+    z-index: 100;
+    margin-top: 10px;
+    background: #CCCCCC
+}
+
+#environment_canvas{
+/*    background: #333333;
+*/}
+
+
+#bar{
+    z-index: 99999;
+    position: absolute;
+    top: 20px;
+    left: 30px;
+    display: inline-flex;
+
+}
+
+
+
+
+h3{
+    font-family: 'Josefin Sans', sans-serif;
+    font-weight: normal;
+    font-size: medium;
+    margin-top: 12px;
+    margin-left: 6px;
+}
+
+
+.round-button {
+    #width:80%;
+    width: 45px;
+    margin-right: 15px;
+}
+.round-button-circle {
+    width: 100%;
+    height:0;
+    padding-bottom: 100%;
+    border-radius: 50%;
+    border:5px solid #cfdcec;
+    overflow:hidden;
+
+    background: #4679BD;
+    box-shadow: 0 0 3px gray;
+}
+.round-button-circle:hover {
+    background:#30588e;
+}
+
+
+
+
+/*body{
+    margin: 0;
+}
+
+canvas{
+    #background: #e3e3e3;
+    display: block;
+}
+
+#src_img{
+    position: absolute;
+    display: none;
+}
+
+#title{
+    z-index: 1000;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+}
+
+h1{
+    font-family: 'Josefin Sans', sans-serif;
+    font-weight: normal;
+    font-size: 20px;
+    margin: 0;
+    padding-left: 12px;
+    padding-bottom: 10px;
+}
+
+h2{
+    font-family: 'Josefin Sans', sans-serif;
+    font-weight: normal;
+    font-size: medium;
+    margin: 0;
+}
+
+#info{
+    position: absolute;
+    z-index: 1000;
+    bottom: 100px;
+    left: 30px;
+}
+
+#environment{
+    position: absolute;
+}
+
+#creation{
+    position: absolute;
+    z-index: 100;
     top: 200px;
     left: 200px;
     background: #FFFFFF;
@@ -65,3 +177,4 @@ h2{
     background: #333333
 
 }
+*/
