--- a/views/canvas.ejs
+++ b/views/canvas.ejs
@@ -57,6 +57,7 @@
 <script type="text/javascript" src="js/platform.js"></script>
 <script>
   var preloaded =<%-JSON.stringify(sprites)%>
+  console.log(preloaded);
   hab.init(preloaded);
   hab.start();
 </script>
