added matts css

--- a/views/canvas.ejs
+++ b/views/canvas.ejs
@@ -9,9 +9,9 @@
   <body>
     <div id="creation">
       <input type="color" id="colorpicker" value="#ffffff" onChange="(currentColor = this.value)">
-      <input type="button" id="Fill" value="Fill" onclick="fill(currentColor)">
-      <input type="button" id="Erase" value="Erase" onclick="erase_all()">
-      <input type="button" id="Save" value="Save" onclick="save()">
+      <input type="button" id="Fill" class="buttons" value="Fill" onclick="fill(currentColor)">
+      <input type="button" id="Erase" class="buttons" value="Erase" onclick="erase_all()">
+      <input type="button" id="Save" class="buttons" value="Save" onclick="save()">
       <input id="name" type="text" name="name" placeholder="name">
       <input id="author" type="text" name="author" placeholder="author">
       <select name="pose" id="pose">
