--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -2,25 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>~(o__o)~</title>
+    <title>~PixlCraft~</title>
     <meta name="description" content="">
     <meta name="author" content="">
     <!--<link href="/style.css" rel="stylesheet">-->
   </head>
   <body>
-      <div>
-        <%= up.CurrentDate.month + " " + up.CurrentDate.day + " " + up.CurrentDate.year %>
-      
-      </div>
-      
-    <div class="composer">
-      <form action="/submit" method="post">
-          <!--<input type="submit" name="nameVariable2" value="skdf">-->
-          
-          <input type="checkbox" name="url_0">
-          <input type="checkbox" name="url_1">
-          <input type="checkbox" name="url_2">
-          <input type="submit">
+      <form action="/go" method="get">
+        <label>What's your name?</label>
+        <input name="name" type="text">
+        <input type='submit'>
       </form>
     </div>
   </body>
