--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -5,11 +5,12 @@
     <title>~PixlCraft~</title>
     <meta name="description" content="">
     <meta name="author" content="">
-    <!--<link href="/style.css" rel="stylesheet">-->
   </head>
   <body>
       <form action="/go" method="get">
         <label>What's your name?</label>
+        <input name="author" type="text">
+        <label>Who's your character?</label>
         <input name="name" type="text">
         <input type='submit'>
       </form>
