--- a/views/canvas.ejs
+++ b/views/canvas.ejs
@@ -9,16 +9,16 @@
   <body>
 
     <div id="bar">
-        <div class="round-button" onclick="toggle_display()"><div class="round-button-circle"><h3>Rest</h3></div></div>
-        <div class="round-button" onclick="toggle_display()"><div class="round-button-circle"><h3>Jump</h3></div></div>
-        <div class="round-button"><div class="round-button-circle"><h3>WR1</h3></div></div>
-        <div class="round-button"><div class="round-button-circle"><h3>WR2</h3></div></div>
-        <div class="round-button"><div class="round-button-circle"><h3>WR3</h3></div></div>
-        <div class="round-button"><div class="round-button-circle"><h3>WL1</h3></div></div>
-        <div class="round-button"><div class="round-button-circle"><h3>WL2</h3></div></div>
-        <div class="round-button"><div class="round-button-circle"><h3>WL3</h3></div></div>
-        <div class="round-button"><div class="round-button-circle"><h3>C1</h3></div></div>
-        <div class="round-button"><div class="round-button-circle"><h3>C2</h3></div></div>
+        <div class="round-button" onclick="toggle_display(1)"><div class="round-button-circle"><h3>Rest</h3></div></div>
+        <div class="round-button" onclick="toggle_display(2)"><div class="round-button-circle"><h3>Jump</h3></div></div>
+        <div class="round-button" onclick="toggle_display(3)"><div class="round-button-circle"><h3>WR1</h3></div></div>
+        <div class="round-button" onclick="toggle_display(4)"><div class="round-button-circle"><h3>WR2</h3></div></div>
+        <div class="round-button" onclick="toggle_display(5)"><div class="round-button-circle"><h3>WR3</h3></div></div>
+        <div class="round-button" onclick="toggle_display(6)"><div class="round-button-circle"><h3>WL1</h3></div></div>
+        <div class="round-button" onclick="toggle_display(7)"><div class="round-button-circle"><h3>WL2</h3></div></div>
+        <div class="round-button" onclick="toggle_display(8)"><div class="round-button-circle"><h3>WL3</h3></div></div>
+        <div class="round-button" onclick="toggle_display(9)"><div class="round-button-circle"><h3>C1</h3></div></div>
+        <div class="round-button" onclick="toggle_display(10)"><div class="round-button-circle"><h3>C2</h3></div></div>
     </div>
 
 
