--- a/views/canvas.ejs
+++ b/views/canvas.ejs
@@ -23,7 +23,7 @@
 
 
     <div id="creation" style="display:none">
-      <input type="color" id="colorpicker" value="#ffffff" onChange="(currentColor = this.value)">
+      <input type="color" id="colorpicker" value="#000000" onChange="(currentColor = this.value)">
       <input type="button" id="Fill" value="Fill" onclick="fill(currentColor)">
       <input type="button" id="Erase" value="Erase" onclick="erase_all()">
       <input type="button" id="Save" value="Save" onclick="save()">
